updating Dockerfile & requirements.txt with required packages (geocoder, gdal, libgeos) and installing packages

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,12 @@ FROM python:3.9-slim-bullseye as base
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
-# Create app directory
+# Install system packages
+RUN apt-get update &&\
+    apt-get install -y binutils libproj-dev gdal-bin &&\
+    apt-get install -y libgeos++-dev libgeos-c1v5 libgeos-dev libgeos-doc
+
+# Create app directory & install requirements
 WORKDIR /src
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt 
