--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,5 +7,6 @@ drf-yasg==1.20.0
 djangorestframework-simplejwt==5.0.0
 djoser==2.0.5
 django-jazzmin==2.4.8
+geocoder==1.38.1
 gunicorn==20.1.0
 whitenoise==5.3.0
