adding wait script in dockerfile and calling it in docker-compose in order for server to wait for db setup complete

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,7 +18,7 @@ services:
     env_file:
       - .env.dev
     command: >
-      sh -c "sh migrations.sh && python manage.py runserver 0.0.0.0:8000"
+      sh -c "/wait && sh migrations.sh && python manage.py runserver 0.0.0.0:8000"
     depends_on:
       - db
 
